--- a/frontend/src/stylesheets/signup.css
+++ b/frontend/src/stylesheets/signup.css
@@ -154,7 +154,7 @@ img {
 
 .main-agileinfo {
     width: 35%;
-    margin: 3em auto;
+    margin: 1px auto;
     background: rgba(255, 255, 255, 0.822);
     background-size: cover;
 }
